Ajout des parties Groupe et Spring Security(Login,Register)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 server.port=9090
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true 
 spring.datasource.platform=h2 
-spring.datasource.url=jdbc:h2:mem:testbd
+spring.datasource.url=jdbc:h2:~/mydb;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.data.rest.base-path=/api
 spring.batch.job.enabled=false
+#######
+jwt.secret =aimedKMohmed
